fixed issues with displaying files. Files are truncated if over 1 mb in size since this is essentially a preview function. Added pretty print button for valid json

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -164,3 +164,12 @@ body {
   width: 0;
 }
 
+.inline-group {
+  margin-right: 10px;
+}
+
+.heading-block {
+  margin-bottom: 10px;
+  margin-top: 10px;
+}
+
